Simplify ModLoader#hasCompletedState, some more cleanup to FML internals