@@ -17,8 +17,6 @@ import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Map;
-import java.util.function.Function;
-import java.util.stream.Collectors;
 
 import static java.util.stream.Collectors.groupingBy;
 import static java.util.stream.Collectors.joining;
@@ -26,19 +24,12 @@ import static net.minecraftforge.fml.loading.LogMarkers.LOADING;
 
 @ApiStatus.Internal
 @Deprecated(since = "1.21.3", forRemoval = true) // TODO: [FML][Loading] Convert to package private in 1.22
-public class UniqueModListBuilder {
-    private final static Logger LOGGER = LogUtils.getLogger();
+public final class UniqueModListBuilder {
+    private UniqueModListBuilder() {}
 
-    private final List<ModFile> modFiles;
+    private static final Logger LOGGER = LogUtils.getLogger();
 
-    public UniqueModListBuilder(final List<ModFile> modFiles) {
-        this.modFiles = modFiles;
-    }
-
-    public UniqueModListData buildUniqueList() {
-        List<ModFile> uniqueModList;
-        List<ModFile> uniqueLibListWithVersion;
-
+    public static UniqueModListData buildUniqueList(List<ModFile> modFiles) {
         // Collect mod files by module name. This will be used for deduping purposes
         final Map<String, List<ModFile>> modFilesByFirstId = modFiles.stream()
                 .filter(mf -> mf.getModFileInfo() != null)
@@ -49,12 +40,12 @@ public class UniqueModListBuilder {
                 .collect(groupingBy(UniqueModListBuilder::getModId));
 
         // Select the newest by artifact version sorting of non-unique files thus identified
-        uniqueModList = modFilesByFirstId.entrySet().stream()
+        final List<ModFile> uniqueModList = modFilesByFirstId.entrySet().stream()
                 .map(UniqueModListBuilder::selectNewestModInfo)
                 .toList();
 
         // Select the newest by artifact version sorting of non-unique files thus identified
-        uniqueLibListWithVersion = libFilesWithVersionByModuleName.entrySet().stream()
+        final List<ModFile> uniqueLibListWithVersion = libFilesWithVersionByModuleName.entrySet().stream()
                 .map(UniqueModListBuilder::selectNewestModInfo)
                 .toList();
 
@@ -66,12 +57,10 @@ public class UniqueModListBuilder {
                 .collect(groupingBy(IModInfo::getModId));
 
         // Transform to the full lib id list
-        final Map<String, List<ModFile>> versionedLibIds = uniqueLibListWithVersion.stream()
+        final List<List<ModFile>> versionedLibs = uniqueLibListWithVersion.stream()
                 .map(UniqueModListBuilder::getModId)
-                .collect(Collectors.toMap(
-                    Function.identity(),
-                    libFilesWithVersionByModuleName::get
-                ));
+                .map(libFilesWithVersionByModuleName::get)
+                .toList();
 
         // Its theoretically possible that some mod has somehow moved an id to a secondary place, thus causing a dupe.
         // We can't handle this
@@ -84,24 +73,24 @@ public class UniqueModListBuilder {
                 )).toList();
 
         if (!dupedModErrors.isEmpty()) {
-            LOGGER.error(LOADING, "Found duplicate mods:\n{}", dupedModErrors.stream().collect(joining("\n")));
+            LOGGER.error(LOADING, "Found duplicate mods:\n{}", String.join("\n", dupedModErrors));
             throw new EarlyLoadingException("Duplicate mods found", null, dupedModErrors.stream()
-                    .map(s -> new EarlyLoadingException.ExceptionData(s))
+                    .map(EarlyLoadingException.ExceptionData::new)
                     .toList());
         }
 
 
-        final List<String> dupedLibErrors = versionedLibIds.values().stream()
-                .filter(modFiles -> modFiles.size() > 1)
+        final List<String> dupedLibErrors = versionedLibs.stream()
+                .filter(libModFiles -> libModFiles.size() > 1)
                 .map(mods -> String.format("\tLibrary: '%s' from files: %s",
                         getModId(mods.getFirst()),
                         mods.stream().map(ModFile::getFileName).collect(joining(", "))
                 )).toList();
 
         if (!dupedLibErrors.isEmpty()) {
-            LOGGER.error(LOADING, "Found duplicate plugins or libraries:\n{}", dupedLibErrors.stream().collect(joining("\n")));
+            LOGGER.error(LOADING, "Found duplicate plugins or libraries:\n{}", String.join("\n", dupedLibErrors));
             throw new EarlyLoadingException("Duplicate plugins or libraries found", null, dupedLibErrors.stream()
-                    .map(s -> new EarlyLoadingException.ExceptionData(s))
+                    .map(EarlyLoadingException.ExceptionData::new)
                     .toList());
         }
 
@@ -122,7 +111,7 @@ public class UniqueModListBuilder {
             modInfoList.sort(Comparator.comparing(UniqueModListBuilder::getVersion).reversed());
             LOGGER.debug("Selected file {} for modid {} with version {}", modInfoList.getFirst().getFileName(), fullList.getKey(), getVersion(modInfoList.getFirst()));
         }
-        return modInfoList.get(0);
+        return modInfoList.getFirst();
     }
 
     private static ArtifactVersion getVersion(final ModFile mf) {
@@ -130,7 +119,7 @@ public class UniqueModListBuilder {
             return mf.getJarVersion();
         }
 
-        return mf.getModInfos().get(0).getVersion();
+        return mf.getModInfos().getFirst().getVersion();
     }
 
     private static String getModId(ModFile modFile) {
@@ -138,7 +127,7 @@ public class UniqueModListBuilder {
             return modFile.getSecureJar().name();
         }
 
-        return modFile.getModFileInfo().getMods().get(0).getModId();
+        return modFile.getModFileInfo().getMods().getFirst().getModId();
     }
 
     public record UniqueModListData(List<ModFile> modFiles, Map<String, List<ModFile>> modFilesByFirstId) {}
